[package]
name = "dvd-term"
version = "0.1.1"
edition = "2021"
description = "just a terminal toy"
repository = "https://github.com/alefnull/dvd-term"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
figlet-rs = "0.1.5"
once_cell = "1.19.0"
rand = "0.8.5"
ruscii = "0.4.0"
