[package]
name = "dvd-term"
version = "0.1.43"
edition = "2021"
description = "A bouncing ASCII art DVD logo (or custom text) for the terminal."
repository = "https://github.com/alefnull/dvd-term"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.5.38", features = ["cargo"] }
figlet-rs = "0.1.5"
rand = "0.9.1"
crossterm = "0.29.0"
